--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.16.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "http-status-codes": "^2.3.0"
+    "http-status-codes": "^2.3.0",
+    "prisma": "^5.16.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
