--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.16.1"
+    "prisma": "^5.16.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
