--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "chatapp",
+  "name": "talkspace",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm' backend/src/index.ts"
+    "dev": "nodemon --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm' backend/src/index.ts",
+    "build": "tsc && npm install && prisma generate --schema=./backend/prisma/schema.prisma && npm install --prefix frontend && npm run build --prefix frontend",
+		"start": "node backend/dist/src/index.js"
   },
   "type": "module",
   "keywords": [],
