--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm' backend/src/index.ts",
-    "build": "tsc && npm install && prisma generate --schema=./backend/prisma/schema.prisma && npm install --prefix frontend && npm run build --prefix frontend",
-		"start": "node backend/dist/src/index.js"
+    "dev": "nodemon --exec 'node --no-warnings=ExperimentalWarning --loader ts-node/esm' src/index.ts",
+    "build": "tsc && npm install && prisma generate --schema=./prisma/schema.prisma",
+    "start": "node dist/src/index.js"
   },
   "type": "module",
   "keywords": [],
@@ -14,20 +14,21 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.16.1",
-    "bcryptjs": "^2.4.3",
+    "@types/bcrypt": "^5.0.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.1",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
