--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"outDir": "./backend/dist",
-		"rootDir": "./backend",
+		"outDir": "./dist",
+		"rootDir": "./",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
@@ -14,6 +14,6 @@
 	"ts-node": {
 		"esm": true
 	},
-	"include": ["backend/src/**/*"],
-	"exclude": ["node_modules", "**/*.spec.ts", "frontend"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "**/*.spec.ts"]
 }
