Refactoring, code clean up

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,4 @@ DB_URL='link to your database'
 PORT='your port'
 JWT_SECRET='your secret key'
 NODE_ENV='development'
+WEBSOCKET_CORS_ORIGIN='your frontend url'
